--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <style>
-        @font-face {
-      font-family: 'pixela';
-      src: 
-       url("{{url_for('static',filename='title.ttf')}}") format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-    }  
-    @font-face {
-        font-family: 'code';
-        src: url('/static/Inconsolata.ttf')
-    }
 
     .block {
         background-color:rgb(54, 75, 113);
@@ -249,7 +240,7 @@
         
     }
     .sunny-back {
-        background-image:url(img/sunset.jpeg);
+        background-image:url(https://raw.githubusercontent.com/cerudev/wb/master/img/sunset.jpeg);
         background-position:bottom;
         background-repeat:no-repeat;
         background-size:cover;
@@ -283,7 +274,7 @@
     </div>
 </div>
 
-<div class="block" style="background:url(img/background.png);">
+<div class="block" style="background:url(https://raw.githubusercontent.com/cerudev/wb/master/img/background.png);">
     <div class="ui container">
         <div class="ui equal width grid">
             <div class="column">
